feat(frozen-format): topology descriptor + cursor/SUBSCRIBE epoch + STALE_TOPOLOGY (Gate 2b)
The topology-staleness cluster of the frozen format, riding the v3 envelope from
Gate 2. Per the ratified design SS2.7 (topology descriptor) and SS2.11 (cursor/
SUBSCRIBE epoch, STALE_TOPOLOGY).

- topology-descriptor.dat replaces the plaintext raft-shard-count.meta. New
  TopologyDescriptor codec (configd-consensus-core, single-sourcing
  RaftArtifactMagic.TOPO_MAGIC): an 18-byte payload
  [formatVersion:u16=1][shardCount:u32][topologyEpoch:u64][reserved:u32=0]
  wrapped in the same K_integrity IntegrityEnvelope (TOPO_MAGIC, NODE_SCOPE) the
  WAL uses. The deploy guard is now tamper-evident (under a key an attacker who
  edits N or the epoch fails the MAC/tag; keyless is CRC-only). Boot fail-closes
  on unknown magic / rolled version / non-zero reserved / topologyEpoch=0
  (reserved-illegal); the reshard N-mismatch is a separate refusal AFTER a
  successful verify. Durable temp+fsync+atomic-rename+dir-fsync write.
- ShardMap.epoch() authority: StaticShardMap returns the descriptor's
  topologyEpoch (v1=1) instead of the hardcoded 0; epoch 0 reserved-illegal.
- Cursor + SUBSCRIBE bind [topologyEpoch:u64]: the cursor vector is
  [topologyEpoch:u64][count:u32]([gid:u32][S:u64])*; SUBSCRIBE prepends the epoch
  before the resume fields. Edge goldens regenerated (epoch=1); EDGE_WIRE_VERSION
  unchanged (clean-break in-place redefinition).
- ErrorCode.STALE_TOPOLOGY=12: a cursor/subscribe whose epoch != current is
  refused STALE_TOPOLOGY (WATCH_CANCELED for watches, ERROR_CLOSE for
  subscriptions) - the etcd ErrCompacted model, client re-hydrates. Ordered
  before the gid-spoof/partial-view guards. Distinct from FRAME_CORRUPT (epoch 0)
  and BAD_SUBSCRIBE.
- WatchCursor decoder RT-5 bound: a cursor payload < 12 bytes => FRAME_CORRUPT; a
  buffer-underflow maps to FRAME_CORRUPT, never an uncaught exception.

At v1 static-N (single epoch=1) the guard/epoch behavior is byte-identi